; ModuleID = '/home/carl/AnghaBench/linux/drivers/interconnect/extr_core.c_icc_node_add.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/interconnect/extr_core.c_icc_node_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.icc_node = type { i32, %struct.icc_provider* }
%struct.icc_provider = type { i32 }

@icc_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @icc_node_add(%struct.icc_node* %0, %struct.icc_provider* %1) #0 {
  %3 = alloca %struct.icc_node*, align 8
  %4 = alloca %struct.icc_provider*, align 8
  store %struct.icc_node* %0, %struct.icc_node** %3, align 8
  store %struct.icc_provider* %1, %struct.icc_provider** %4, align 8
  %5 = call i32 @mutex_lock(i32* @icc_lock)
  %6 = load %struct.icc_provider*, %struct.icc_provider** %4, align 8
  %7 = load %struct.icc_node*, %struct.icc_node** %3, align 8
  %8 = getelementptr inbounds %struct.icc_node, %struct.icc_node* %7, i32 0, i32 1
  store %struct.icc_provider* %6, %struct.icc_provider** %8, align 8
  %9 = load %struct.icc_node*, %struct.icc_node** %3, align 8
  %10 = getelementptr inbounds %struct.icc_node, %struct.icc_node* %9, i32 0, i32 0
  %11 = load %struct.icc_provider*, %struct.icc_provider** %4, align 8
  %12 = getelementptr inbounds %struct.icc_provider, %struct.icc_provider* %11, i32 0, i32 0
  %13 = call i32 @list_add_tail(i32* %10, i32* %12)
  %14 = call i32 @mutex_unlock(i32* @icc_lock)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
